--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.application.name=Student-Management
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/student_db}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:password}
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+# --- Server port (use PORT env var when on Render, 8080 by default) ---
 server.port=${PORT:8080}
+
+# --- DataSource: values will come from environment variables on Render ---
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+# --- JPA / Hibernate ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional: to avoid schema issue differences
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
